# gradle-deps-differ

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
report/: report_template.hbs
src/: main.rs  parser.rs
src/types/: dependency.rs  mod.rs  version.rs
