[package]
name = "gradle-deps-differ"
version = "0.1.0"
edition = "2021"
license = "MIT"

readme = "README.md"
description = "A differ for the Gradle dependencies task output format."
repository = "https://github.com/miltosdoul/gradle-deps-differ.git"

keywords = ["gradle"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
handlebars = "4.4.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.1"
version-compare = "0.1.1"

[profile.release]
lto = 'fat'
codegen-units = 1
panic = 'unwind'
strip = true

[build]
rustflags = ["-C", "target-cpu=native"]
